# DPbot

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  README.md  log4rs.yaml
data/command_handler/: command.json  data.db
data/command_handler/atcoder/: rating.py
data/command_handler/codeforces/: analyze.py  rating.py
data/manager/: config.json  duel_help.json  help.json
data/word_cloud/: ocr.py  stopword.txt
plugins/aichat/: Cargo.toml
plugins/aichat/src/: config.rs  html.rs  lib.rs  req.rs  screen_shot.rs
plugins/command_handler/: Cargo.toml
plugins/command_handler/src/: config.rs  error.rs  lib.rs  utils.rs
plugins/command_handler/src/atcoder/: mod.rs
plugins/command_handler/src/codeforces/: mod.rs  recommend.rs
plugins/command_handler/src/duel/: challenge.rs  config.rs  handlers.rs  mod.rs  problem.rs  submission.rs  user.rs
plugins/command_handler/src/sql/: duel.rs  mod.rs  utils.rs
plugins/command_handler/src/sql/duel/: challenge.rs  mod.rs  problem.rs  user.rs
plugins/contest/: Cargo.toml
plugins/contest/src/: contest.rs  getter.rs  lib.rs  retry.rs
plugins/manager/: Cargo.toml
plugins/manager/src/: config.rs  lib.rs
plugins/utils/: Cargo.toml
plugins/utils/src/: api_limit.rs  lib.rs
plugins/word_cloud/: Cargo.toml
plugins/word_cloud/src/: lib.rs  ocr.rs
plugins/word_cloud/src/ocr/: mod.rs  tencent.rs
src/: main.rs
