[package]
name = "bot"
version = "0.1.0"
edition = "2024"

[dependencies]
command_handler = { version = "0.1.0", path = "plugins/command_handler" }
kovi = "0.12"
manager = { version = "0.1.0", path = "plugins/manager" }
contest = { version = "0.1.0", path = "plugins/contest" }
log4rs = "1.4"
aichat = { version = "0.1.0", path = "plugins/aichat" }
word_cloud = { version = "0.1.0", path = "plugins/word_cloud" }
utils = { version = "0.1.0", path = "plugins/utils" }

[workspace]
members = [
    "plugins/aichat",
    "plugins/command_handler",
    "plugins/contest",
    "plugins/manager",
    "plugins/utils",
    "plugins/word_cloud",
]

[workspace.dependencies]
kovi = "0.12"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
utils = { version = "0.1.0", path = "plugins/utils" }
