[package]
name = "command_handler"
version = "0.1.0"
edition = "2024"

[dependencies]
kovi.workspace = true
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"
rand = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
strsim = "0.11"
serde = { version = "1.0", features = ["derive"] }
urlencoding = "2.1"
