[package]
name = "command_handler"
version = "0.1.0"
edition = "2024"

[dependencies]
kovi.workspace = true
serde.workspace = true
anyhow.workspace = true
utils.workspace = true
reqwest = { version = "0.12", features = ["json"] }
rand = "0.9"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
strsim = "0.11"
base64 = "0.22"
thiserror = "2.0"
