[package]
name = "word_cloud"
version = "0.1.0"
edition = "2024"

[dependencies]
kovi.workspace = true
serde.workspace = true
anyhow.workspace = true
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
base64 = "0.22"
jieba-rs = "0.8"
moka = { version = "0.12.10", features = ["future"] }
reqwest = { version = "0.12", features = ["json"] }
